Fix overflow on mobile index user panel view

--- a/src/DataGate/Web/DataGate.Web/wwwroot/css/home/responsive.scss
+++ b/src/DataGate/Web/DataGate.Web/wwwroot/css/home/responsive.scss
@@ -6,7 +6,7 @@
 *
 */
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 599px) {
     .footer-first {
         bottom: 8%;
     }
